# rheia

./: .gitignore  .gitmodules  IRRLICHT_LICENSE.txt  Makefile.in  README.txt  aclocal.m4  autoconf_inc.m4  config.status  configure  configure.in  configure.in.svae  create_build_files.sh  create_build_files_macos.sh  create_build_files_win.bat  create_build_files_win_no_irr.bat  premake.lua  rheia-config.in  tags
buildgtk/: config.status
buildgtk/lib/: librheia_gtk2u_base-2.0.so.1  librheia_gtk2u_editor-2.0.so.1  librheia_gtk2u_loggers-2.0.so.1  librheia_gtk2u_loggers-2.0.so.1.0.0  librheia_gtk2u_packagemgt-2.0.so.1  librheia_gtk2u_python-2.0.so.1  librheia_gtk2u_python-2.0.so.1.0.0  librheia_gtk2u_utils-2.0.so.1  librheia_gtk2u_utils-2.0.so.1.0.0  librheia_gtk2u_webconnect-2.0.so.1  librheia_gtk2u_webconnect-2.0.so.1.0.0  librheia_gtk2u_workspacemgt-2.0.so.1  librheia_gtk2u_workspacemgt-2.0.so.1.0.0
debian/: changelog  control  copyright  package.symbols  rules  shlibs.local
include/irrlicht/: CIrrDeviceLinux.h  IrrCompileConfig.h
include/libxml/: xmlversion.h
include/plplot/: config.h  drivers.h  ltdl_win32.h  pdf.h  plConfig.h  plDevs.h  plcore.h  plplotP.h  plstrm.h
include/qsastime/: qsastimeP.h  tai-utc.h
include/rheia/: RheiaApp.h  RheiaMainFrame.h  version.h
include/tuto1/: CppContext.h  CppFileHandler.h  PyApplyRegExDialog.h  PyConsole.h  PyConsoleManager.h  PyContext.h  PyEditor.h  PyEditorBase.h  PyEditorContext.h  PyFile.h  PyFileManager.h  PyFindFilesDialog.h  PyUtils.h  PythonFileHandler.h  Tuto1App.h  Tuto1MainFrame.h
include/wxplplot/: plstream.h  wxPLplotstream.h  wxPLplotwindow.h
include/wxwidgets/: wxwidgets.h
macosx/postinstall/: Info.plist  icon.icns  postbuild.sh  postbuildd.sh  pyedtInfo.plist  pyedt_exe.sh  pyedt_exed.sh  pyedt_postbuild.sh  pyedt_postbuildd.sh  rheia_exe.sh  rheia_exed.sh
osx-build/: config.status
osx-build/.deps/: basedll_RheiaAboutDialog.o.d  basedll_RheiaAppBase.o.d  basedll_RheiaApplicationConfigurationDialog.o.d  basedll_RheiaApplicationGeneralPanel.o.d  basedll_RheiaBookConfigurationPanel.o.d  basedll_RheiaBookManager.o.d  basedll_RheiaBookPage.o.d  basedll_RheiaCenterMrgSettingsPanel.o.d  basedll_RheiaCenterPaneManager.o.d  basedll_RheiaConfigurationDialog.o.d  basedll_RheiaConfigurationManager.o.d  basedll_RheiaConfigurationPathsDialog.o.d  basedll_RheiaConfigurationPattern.o.d  basedll_RheiaConfigurationToolsManager.o.d  basedll_RheiaDebug.o.d  basedll_RheiaDockSystSettingsPanel.o.d  basedll_RheiaEnvVarsConfigurationDialog.o.d  basedll_RheiaEnvVarsSelectionDialog.o.d  basedll_RheiaEnvironementManager.o.d  basedll_RheiaEventFrame.o.d  basedll_RheiaEvents.o.d  basedll_RheiaEventsManager.o.d  basedll_RheiaHtmlComposer.o.d  basedll_RheiaInfoMgrSettingsPanel.o.d  basedll_RheiaInfoPage.o.d  basedll_RheiaInfoPaneManager.o.d  basedll_RheiaLeftMgrSettingsPanel.o.d  basedll_RheiaLeftPaneManager.o.d  basedll_RheiaManagedFrame.o.d  basedll_RheiaManager.o.d  basedll_RheiaMenuManager.o.d  basedll_RheiaPageContainer.o.d  basedll_RheiaPersonalityManager.o.d  basedll_RheiaProfileManager.o.d  basedll_RheiaSplashScreen.o.d  basedll_RheiaStartPageContainer.o.d  basedll_RheiaStatusBarManager.o.d  basedll_RheiaToolBarManager.o.d  basedll_RheiaTreeItem.o.d  basedll_RheiaTreeItemData.o.d  (+16 more)
osx-build/lib/: librheia_gtk2u_utils-2.0.1.0.0.dylib  librheia_gtk2u_utils-2.0.1.dylib  librheia_gtk2u_utils-2.0.dylib  librheia_gtk2u_webconnect-2.0.1.0.0.dylib  librheia_gtk2u_webconnect-2.0.1.dylib  librheia_gtk2u_webconnect-2.0.dylib  librheia_osx_cocoau_base-2.0.1.0.0.dylib  librheia_osx_cocoau_base-2.0.1.dylib  librheia_osx_cocoau_base-2.0.dylib  librheia_osx_cocoau_editor-2.0.1.0.0.dylib  librheia_osx_cocoau_editor-2.0.1.dylib  librheia_osx_cocoau_editor-2.0.dylib  librheia_osx_cocoau_loggers-2.0.1.0.0.dylib  librheia_osx_cocoau_loggers-2.0.1.dylib  librheia_osx_cocoau_loggers-2.0.dylib  librheia_osx_cocoau_packagemgt-2.0.1.0.0.dylib  librheia_osx_cocoau_packagemgt-2.0.1.dylib  librheia_osx_cocoau_packagemgt-2.0.dylib  librheia_osx_cocoau_python-2.0.1.0.0.dylib  librheia_osx_cocoau_python-2.0.1.dylib  librheia_osx_cocoau_python-2.0.dylib  librheia_osx_cocoau_utils-2.0.1.0.0.dylib  librheia_osx_cocoau_utils-2.0.1.dylib  librheia_osx_cocoau_utils-2.0.dylib  librheia_osx_cocoau_webconnect-2.0.1.0.0.dylib  librheia_osx_cocoau_webconnect-2.0.1.dylib  librheia_osx_cocoau_webconnect-2.0.dylib  librheia_osx_cocoau_workspacemgt-2.0.1.0.0.dylib  librheia_osx_cocoau_workspacemgt-2.0.1.dylib  librheia_osx_cocoau_workspacemgt-2.0.dylib
python/: reswig.sh  rheia.pth
python/base/: base.i  base.py  base_api.i  base_panels.i  base_wrap.cxx  base_wrap.h  dialogs.i  premake.lua  rh_event.i
python/loggers/: _loggers.pyd  loggers.i  loggers_api.i  loggers_wrap.cxx  loggers_wrap.h  premake.lua
python/packagemgt/: _packagemgt.pyd  packagemgt.i  packagemgt.py  packagemgt_api.i  packagemgt_wrap.cxx  packagemgt_wrap.h  pluginevent.i  premake.lua
python/rheia/: __init__.py  _base.exp  _base.lib  _loggers.exp  _loggers.lib  _packagemgt.exp  _packagemgt.lib  _utils.exp  _utils.lib  _workspacemgt.exp  _workspacemgt.lib  base.py  packagemgt.py  utils.py  workspacemgt.py
python/rheia_d/: base.py  loggers.py  workspacemgt.py
python/tools/: pyPluginMgr.py  pyRheiaVars.py
python/utils/: _utils.pyd  premake.lua  utils.i  utils_api.i  utils_wrap.cxx  utils_wrap.h
python/workspacemgt/: _workspacemgt.pyd  premake.lua  wksp_events.i  workspacemgt.i  workspacemgt.py  workspacemgt_api.i  workspacemgt_wrap.cxx  workspacemgt_wrap.h
scripts/base/: premake.lua
scripts/csirocsa/: premake.lua
scripts/editor/: premake.lua
scripts/irrlicht/: premake.lua
scripts/libxml2/: premake.lua
scripts/loggers/: premake.lua
scripts/packagemgt/: premake.lua
scripts/plplot/: premake.lua
scripts/python/: premake.lua
scripts/qsastime/: premake.lua
scripts/rheia/: premake.lua
scripts/utils/: premake.lua
scripts/webconnect/: premake.lua
scripts/workspacemgt/: premake.lua
share/: .premake_package_template.lua.swp  premake_package_template.lua
(+493 files in other folders)
